fix(BaseStyle): fix button--link arrow vertical alignment

--- a/assets/styles/_base.scss
+++ b/assets/styles/_base.scss
@@ -501,13 +501,13 @@ button {
       border-top: 2px solid currentColor;
       content: '';
       display: inline-block;
-      height: 0.4375rem;
+      height: 0.5rem;
       margin-bottom: 0.0625rem;
       margin-left: 0.25rem;
       margin-right: 2px;
       transform: rotate(45deg);
       vertical-align: baseline;
-      width: 0.4375rem;
+      width: 0.5rem;
     }
 
     &.button--small {
